--- a/App/Protocols/SystemWF/M300Altum.html
+++ b/App/Protocols/SystemWF/M300Altum.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="2_Style/Style.css">
+    <link rel="stylesheet" href="www\\2_Style\\UAS_Style_AJCG.css">
     <script src="2_Style/Functions.js"></script> 
   </head>
 <body>
