--- a/App/Protocols/SystemWF/M300Altum.html
+++ b/App/Protocols/SystemWF/M300Altum.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="www\\2_Style\\UAS_Style_AJCG.css">
-    <script src="2_Style/Functions.js"></script> 
+    <script src="3_Functions/Functions.js"></script> 
   </head>
 <body>
 <h1 align="center">DJI-M300 & Micasense Altum</h1>
@@ -27,12 +26,13 @@
 <!------------------------------------------------------------> 
 <!--------------        About the sensor        -------------->
 <!------------------------------------------------------------> 
-<div data-include="AltumCamera"></div>
+<div data-include="Sensor_Altum"></div>
+
 
 <!------------------------------------------------------------> 
 <!--------------         Mission Planning       -------------->
 <!------------------------------------------------------------> 
-<div data-include="MissionPlanningUgCS"></div>
+<div data-include="Plan_UgCS"></div>
 
 <!------------------------------------------------------------> 
 <!--------------    Equipment Pre Flight List   -------------->
