--- a/App/www/1_Protocols/1_SetUps/DJIM300Altum.html
+++ b/App/www/1_Protocols/1_SetUps/DJIM300Altum.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="3_Functions/Functions.js"></script> 
+    <script src="3_Functions/Protocols.js"></script> 
   </head>
 <body>
 <h1 align="center">DJI-M300 & Micasense Altum</h1>
@@ -26,13 +26,13 @@
 <!------------------------------------------------------------> 
 <!--------------        About the sensor        -------------->
 <!------------------------------------------------------------> 
-<div data-include="Sensor_Altum"></div>
+<div data-include="4_Sensors/MicasenseAltum"></div>
 
 
 <!------------------------------------------------------------> 
 <!--------------         Mission Planning       -------------->
 <!------------------------------------------------------------> 
-<div data-include="Plan_UgCS"></div>
+<div data-include="2_Planning/UgCS_Photogrammetry"></div>
 
 <!------------------------------------------------------------> 
 <!--------------    Equipment Pre Flight List   -------------->
