--- a/App/www/1_Protocols/1_SetUps/LiBackpack.html
+++ b/App/www/1_Protocols/1_SetUps/LiBackpack.html
@@ -5,7 +5,7 @@
     <script src="3_Functions/Functions.js"></script> 
   </head>
 <body>
-<h1 align="center">Phantom4 - RGB</h1>
+<h1 align="center">DJIM600 - Altum</h1>
 
 <!--------------   Disclamer and Introduction   -------------->
 <p align="justify">
