--- a/App/www/1_Protocols/1_SetUps/DJIM600Altum.html
+++ b/App/www/1_Protocols/1_SetUps/DJIM600Altum.html
@@ -5,7 +5,7 @@
     <script src="3_Functions/Functions.js"></script> 
   </head>
 <body>
-<h1 align="center">DJIM600 - Altum</h1>
+<h1 align="center">DJIM600 - Micasense Altum</h1>
 
 <!--------------   Disclamer and Introduction   -------------->
 <p align="justify">
@@ -26,7 +26,7 @@
 <!------------------------------------------------------------> 
 <!--------------        About the sensor        -------------->
 <!------------------------------------------------------------> 
-<!--<div data-include="Sensor_Altum"></div>-->
+<div data-include="MicasenseAltum"></div>
 
 
 <!------------------------------------------------------------> 
