--- a/App/www/1_Protocols/1_SetUps/LiBackpack.html
+++ b/App/www/1_Protocols/1_SetUps/LiBackpack.html
@@ -47,16 +47,47 @@
 <!------------------------------------------------------------> 
 <!--------------         Field operation        -------------->
 <!------------------------------------------------------------> 
-<div data-include="FieldOps"></div>
 
-<!--   Pre-Flight   -->
-<div data-include="Pre-Flight"></div>
+<div class="checklist"></div>
+  <h2 align="left">Assembly Checklist</h2>
+  <ul>
+    <li>
+      <input type="checkbox">
+       Place the LiBackpack DGC50's storage control unit and scanner arm on the desktop. 
+       <div class="hover-image">(?)<img src="./4_Graphs/DGC50/image.jpg" class="center" alt="Hovered Image"></div>
+      </li>
+    <li>
+      <input type="checkbox"> Plug the scanner arm into LiBackpack DGC50 storage and control unit. The tilted laser scanner should be opposite to the main body.
+      <div class="hover-image">(?)<img src="./4_Graphs/DGC50/image.jpg" class="center" alt="Hovered Image"></div>
+    </li>
+    <li>
+      <input type="checkbox"> You can hear a click sound when locking the scanner onto the main body. Then, tighten the screw to secure mounting.
+      <div class="hover-image">(?)<img src="./4_Graphs/DGC50/image.jpg" class="center" alt="Hovered Image"></div>
+    </li>
+    <li>
+      <input type="checkbox"> Loosen the two locking rings of the scanner rod counterclockwise, so the scanner rod can rise and fall freely.
+      <div class="hover-image">(?)<img src="./4_Graphs/DGC50/image.jpg" class="center" alt="Hovered Image"></div>
+    </li>
+    <li>
+      <input type="checkbox"> Try the telescopic rod and adjust the rod length using both hands.
+      <div class="hover-image">(?)<img src="./4_Graphs/DGC50/image.jpg" class="center" alt="Hovered Image"></div>
+    </li>
+    <li>
+      <input type="checkbox"> Secure the adjustment by screwing the locking rings tightly.
+      <div class="hover-image">(?)<img src="./4_Graphs/DGC50/image.jpg" class="center" alt="Hovered Image"></div>
+    </li>
+    <li>
+      <input type="checkbox"> Plug in the connection cable into the scanner arm and main body separately. Note: Align the port by the corresponding red dots.
+      <div class="hover-image">(?)<img src="./4_Graphs/DGC50/image.jpg" class="center" alt="Hovered Image"></div>
+    </li>
+    <li>
+      <input type="checkbox"> Assembly done.
+      <div class="hover-image">(?)<img src="./4_Graphs/DGC50/image.jpg" class="center" alt="Hovered Image"></div>
+    </li>
+  </ul>
+</div>
 
-<!--   Flight   -->
-<div data-include="Flight"></div>
 
-<!--   Pos-Flight   -->
-<div data-include="Pos-Flight"></div>
 
 <!------------------------------------------------------------> 
 <!--------------        Equipment return        -------------->
