--- a/App/www/1_Protocols/4_Sensors/MicasenseAltum.html
+++ b/App/www/1_Protocols/4_Sensors/MicasenseAltum.html
@@ -31,7 +31,7 @@
 
 <div id="CameraImage">
   <figure>
-    <img src="./4_Graphs/Altum.png" class="center" style="width:80%"> 
+    <img src="./4_Graphs/MicasensAltum/Altum.png" class="center" style="width:80%"> 
     <figcaption style="text-align: center;" >Micasense Altum camera and DLS 2.</figcaption>
   </figure>
 </div> 
